box-shadow and text-shadow style added. hyperlinks added to index.html & workshop-content. documents added introduction-to-workshops.pdf and list-of-modules_workshops.pdf. carousel pictures added. card picture added. contact.html, workshop-documents.html and workshop-packages.html added to project.

--- a/workshop-content.html
+++ b/workshop-content.html
@@ -37,13 +37,13 @@
               <a class="nav-link nav-pad" href="workshop-content.html">Workshop content</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link nav-pad" href="#">Workshop packages</a>
+              <a class="nav-link nav-pad" href="workshop-packages.html">Workshop packages</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link nav-pad" href="#">Workshop documents</a>
+              <a class="nav-link nav-pad" href="workshop-documents.html">Workshop documents</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link nav-pad" href="#">Contact</a>
+              <a class="nav-link nav-pad" href="contact.html">Contact</a>
             </li>
           </ul>
         </div>
@@ -67,64 +67,95 @@
           <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12" >
             <div id="content">
 
-              <h2 class=" pl-5">China</h2>
+              <h2 class="d-none d-sm-block d-md-block d-lg-block d-xl-block pl-5">China</h2>
+              <h4 class="d-block d-sm-none pl-5"> China</h4>
 
               <div class="pl-5">
-                <h4>Cultural competency:</h4>
+                <h4 class="d-none d-sm-block d-md-block d-lg-block d-xl-block">Cultural competency:</h4>
+                <h5 class="d-block d-sm-none">Cultural competency:</h5>
 
-                <ul>
+                <ul class="d-none d-sm-block d-md-block d-lg-block d-xl-block">
                   <li><h6>Cultural Intelligence or CQ</h6></li>
                   <li><h6>Eastern vs Western thought</h6></li>
                   <li><h6>Collectivism vs Individualism</h6></li>
                 </ul>
+
+                <ul class="d-block d-sm-none">
+                  <li><p>Cultural Intelligence or CQ</p></li>
+                  <li><p>Eastern vs Western thought</p></li>
+                  <li><p>Collectivism vs Individualism</p></li>
+                </ul>
               </div>
 
 
               <div class="pl-5">
-                <h4>Business customs and Etiquette:</h4>
-
-                <ul>
+                <h4 class="d-none d-sm-block d-md-block d-lg-block d-xl-block">Business customs and Etiquette:</h4>
+                <h5 class="d-block d-sm-none">Business customs and Etiquette:</h5>
+                <ul class="d-none d-sm-block d-md-block d-lg-block d-xl-block">
                   <li><h6>At the dinner table</h6></li>
                   <li><h6>Hierachy and Seniority</h6></li>
                   <li><h6>Communication</h6></li>
                 </ul>
+                <ul class="d-block d-sm-none">
+                  <li><p>At the dinner table</p></li>
+                  <li><p>Hierachy and Seniority</p></li>
+                  <li><p>Communication</p></li>
+                </ul>
 
               </div>
 
               <div class="pl-5">
-                <h4>Busines/Social Networks:</h4>
+                <h4 class="d-none d-sm-block d-md-block d-lg-block d-xl-block">Busines/Social Networks:</h4>
+                <h5 class="d-block d-sm-none">Busines/Social Networks:</h5>
 
-                <ul>
+                <ul class="d-none d-sm-block d-md-block d-lg-block d-xl-block">
                   <li><h6>Guanxi</h6></li>
                   <li><h6>Mianzi</h6></li>
                   <li><h6>Renqing</h6></li>
                 </ul>
+                <ul class="d-block d-sm-none">
+                  <li><p>Guanxi</p></li>
+                  <li><p>Mianzi</p></li>
+                  <li><p>Renqing</p></li>
+                </ul>
               </div>
 
 
               <div class="pl-5">
-                <h4>China-Australia relations:</h4>
+                <h4 class="d-none d-sm-block d-md-block d-lg-block d-xl-block">China-Australia relations:</h4>
+                <h5 class="d-block d-sm-none">China-Australia relations:</h5>
 
-                <ul>
+                <ul class="d-none d-sm-block d-md-block d-lg-block d-xl-block">
                   <li><h6>Geo-political relations</h6></li>
                   <li><h6>Trade and FDI</h6></li>
                 </ul>
-              </div>
-
-
-              <div class="pl-5">
-                <h4>Travel orientation:</h4>
-
-                <ul>
-                  <li><h6>Travelling to China</h6></li>
-                  <li><h6>Apps/Payments methods/E-commerce</h6></li>
+                <ul class="d-block d-sm-none">
+                  <li><p>Geo-political relations</p></li>
+                  <li><p>Trade and FDI</p></li>
                 </ul>
               </div>
 
-              <h2 class=" pl-5">Japan</h2>
 
               <div class="pl-5">
-                <h4>Topics</h4>
+                <h4 class="d-none d-sm-block d-md-block d-lg-block d-xl-block">Travel orientation:</h4>
+                <h5 class="d-block d-sm-none">Travel orientation:</h5>
+
+                <ul class="d-none d-sm-block d-md-block d-lg-block d-xl-block">
+                  <li><h6>Travelling to China</h6></li>
+                  <li><h6>Apps/Payments methods/E-commerce</h6></li>
+                </ul>
+                <ul class="d-block d-sm-none">
+                  <li><p>Travelling to China</p></li>
+                  <li><p>Apps/Payments methods/E-commerce</p></li>
+                </ul>
+              </div>
+
+              <h2 class="d-none d-sm-block d-md-block d-lg-block d-xl-block pl-5">Japan</h2>
+              <h4 class="d-block d-sm-none pl-5"> Japan</h4>
+
+              <div class="pl-5">
+                <h4 class="d-none d-sm-block d-md-block d-lg-block d-xl-block">Topics</h4>
+                <h5 class="d-block d-sm-none ">Topics</h5>
               </div>
 
 
