--- a/workshop-documents.html
+++ b/workshop-documents.html
@@ -51,11 +51,10 @@
 
       <div class="jumbotron">
         <h3 class="jumbo-style d-block d-sm-none">
-          Cross-Cultural Communication
+          Workshop documents
         </h3>
-        <h1 class="jumbo-style display-3 d-none d-sm-block d-md-block d-lg-block d-xl-block">Cross-Cultural Communication</h1>
-        <p class="jumbo-style lead">East Asia Workshops/Consulting</p>
-        <hr class="">
+        <h1 class="jumbo-style display-3 d-none d-sm-block d-md-block d-lg-block d-xl-block">Workshop documents</h1>
+        
       </div>
       
     </div>
@@ -66,10 +65,11 @@
           <div class="col-xl-3 col-lg-3 col-md-3"></div>
           <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12" >
             <div id="content">
-              <h4 class="d-none d-sm-block d-md-block d-lg-block d-xl-block"><a href="https://www.cccasia.com.au" class="font-weight-bolder">Cross Cultural Communication–Asia</a> and <a href="https://www.aozhongqiao.com/" class="font-weight-bolder">Aozhongqiao (澳中桥)</a> provide targeted workshops to help prepare Australian business-people for travel to and doing business with China, and to organisations and local government wanting to improve communication and dealings between the two parties. We also provide one-to-one tutoring or workshops for Chinese business professionals who wish to improve their spoken conversational and/or technical English.
-              </h4>
-              <p class="d-block d-sm-none"><a href="https://www.cccasia.com.au" class="font-weight-bolder">Cross Cultural Communication–Asia</a> and <a href="https://www.aozhongqiao.com/" class="font-weight-bolder">Aozhongqiao (澳中桥)</a> provide targeted workshops to help prepare Australian business-people for travel to and doing business with China, and to organisations and local government wanting to improve communication and dealings between the two parties. We also provide one-to-one tutoring or workshops for Chinese business professionals who wish to improve their spoken conversational and/or technical English.
-              </p>
+              <h3 class="my-5 pl-5 d-none d-sm-block d-md-block d-lg-block d-xl-block"><a href="docs/Introduction to Workshops.pdf">Introduction to Workshops.pdf</a></h3>
+              <h5 class="my-5 pl-5 d-block d-sm-none"><a href="docs/Introduction to Workshops.pdf">Introduction to Workshops.pdf</a></h5>
+
+              <h3 class="my-5 pl-5 d-none d-sm-block d-md-block d-lg-block d-xl-block"><a href="docs/List of Modules_Workshops.pdf">List of Modules_Workshops.pdf</a></h3>
+              <h5 class="my-5 pl-5 d-block d-sm-none"><a href="docs/List of Modules_Workshops.pdf">List of Modules_Workshops.pdf</a></h5>
             </div>
           </div>
           <div class="col-xl-3 col-lg-3 col-md-2 "></div>
