--- a/workshop-packages.html
+++ b/workshop-packages.html
@@ -14,7 +14,11 @@
 
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
-    <title>Hello, world!</title>
+    <title>Cross-Cultural Communication, East Asia Workshops/Consulting</title>
+
+    <link rel="canonical"  href="https://www.cccasia.com.au">
+
+    <meta name="description" content="Basic proficiency in Chinese & Japanese, Cross-Cultural Workshops, China-Australia relations, Chinese culture, Workshops, China-Australia Busines relations, Economy and Trade, Geo-politics, Chinese business customs">
   </head>
   <body>
 
@@ -22,7 +26,7 @@
     <div class="container">
 
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand" href="https://www.cccasia.com.au">
           <i class="bi bi-flower1"></i>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
