--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
           <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12" >
             <div id="content">
 
-              <div class="row my-5">
+              <div class="row">
 
 
                 <div class="col-4  text-right">
