--- a/workshop-content.html
+++ b/workshop-content.html
@@ -154,13 +154,26 @@
                 </ul>
               </div>
 
-              <h2 class="d-none d-sm-block d-md-block d-lg-block d-xl-block pl-5">Japan</h2>
-              <h4 class="d-block d-sm-none pl-5"> Japan</h4>
+              <h2 class="mt-4 d-none d-sm-block d-md-block d-lg-block d-xl-block pl-5">Japan</h2>
+              <h4 class="mt-4 d-block d-sm-none pl-5"> Japan</h4>
 
               <div class="pl-5">
                 <h4 class="d-none d-sm-block d-md-block d-lg-block d-xl-block">Topics</h4>
                 <h5 class="d-block d-sm-none ">Topics</h5>
               </div>
+
+              <h2 class="mt-4 pl-5 d-none d-sm-block d-md-block d-lg-block d-xl-block">East/West</h2>
+              <h4 class="mt-4 d-block d-sm-none pl-5">East/West</h4>
+
+              <div class="pl-5">
+                <h4 class="d-none d-sm-block d-md-block d-lg-block d-xl-block">Mindsets</h4>
+                <h5 class="d-block d-sm-none">Mindsets</h5>
+              </div>
+
+              <div class="pl-5">
+                <h4 class="d-none d-sm-block d-md-block d-lg-block d-xl-block">Philosophies</h4>
+                <h5 class="d-block d-sm-none">Philosophies</h5>
+              </div>        
 
 
 
