--- a/workshop-content.html
+++ b/workshop-content.html
@@ -38,6 +38,9 @@
               <a class="nav-link" href="index.html"><i class="bi bi-house"></i> <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
+              <a class="nav-link nav-pad" href="about.html">About</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link nav-pad" href="workshop-content.html">Workshop content</a>
             </li>
             <li class="nav-item">
@@ -184,7 +187,12 @@
       </div>
 
       <div class="footer">
-
+        <div class="flex-container">
+          <div></div>
+          <div><a href="mailto:kate@cccasia.com.au?Subject=Website%20Enquiry">kate@cccasia.com.au</a></div>
+          <div></div>
+          
+        </div>
       </div>
     </div>
 
