--- a/about.html
+++ b/about.html
@@ -58,11 +58,9 @@
 
       <div class="jumbotron">
         <h3 class="jumbo-style d-block d-sm-none">
-          Cross Cultural Communication-Asia
+          About
         </h3>
-        <h1 class="jumbo-style display-4 d-none d-sm-block d-md-block d-lg-block d-xl-block">Cross Cultural Communication-Asia</h1>
-        <h4 class="jumbo-style">East Asia Workshops/Consulting</h4>
-        <hr class="">
+        <h1 class="jumbo-style display-3 d-none d-sm-block d-md-block d-lg-block d-xl-block">About</h1>
       </div>
       
     </div>
@@ -73,7 +71,21 @@
           <div class="col-xl-3 col-lg-3 col-md-3"></div>
           <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12" >
             <div id="content">
-              
+              <h5>
+                Kate Teys is the Founder of Cross Culture Communication - Asia.  She has a background in East Asian Economic Development from Melbourne University and has lived and worked in Japan and China and travelled extensively throughout South East Asia during her career in International Aid.
+              </h5>
+              <h5>
+                Kate has studied Japanese and Chinese and has a working knowledge of both.
+              </h5>
+              <h5>
+                Kate set up CCCAsia to help individuals, businesses, government and organisations to develop their Cultural Literacy so as to improve their communication and dealings with counterparts in Asia.
+              </h5>
+              <h5>
+                The Cross Culture Workshops for China include Cultural Competency, Business Etiquette and Customs, as well as up to date information on China and Australia’s Trade relations.
+              </h5>
+              <h5>
+                Kate also offers English tutoring online.  She has experience in Teaching English in Japan and Korea and with Asian communities in Sydney.
+              </h5>
             </div>
           </div>
           <div class="col-xl-3 col-lg-3 col-md-2 "></div>
