--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
     </div>
 
     <div class="container">
-      <div id="main">
+      <div id="mainGrid">
         <div class="row">
           <div class="col-xl-3 col-lg-3 col-md-3"></div>
           <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12" >
