container row classes added to each section on all pages. col-12 added to all sections to use full width of screen.

--- a/workshop-packages.html
+++ b/workshop-packages.html
@@ -23,7 +23,10 @@
   <body>
 
 
-    <div class="container">
+<div class="container">
+      <div class="row">
+
+        <div id="navbarGrid" class="col-12" >
 
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="https://www.cccasia.com.au">
@@ -55,6 +58,14 @@
           </ul>
         </div>
       </nav>
+</div>
+</div>
+</div>
+
+
+<div class="container">
+    <div class="row">
+      <div id="jumbotronGrid" class="col-12" >
 
       <div class="jumbotron">
         <h3 class="jumbo-style d-block d-sm-none">
@@ -64,10 +75,14 @@
         
       </div>
       
-    </div>
+</div>
+</div>
+</div> 
 
-    <div class="container">
-      <div id="mainGrid">
+
+<div class="container">
+    <div class="row">
+      <div id="mainGrid" class="col-12" >
         <div class="row">
           <div class="col-xl-3 col-lg-3 col-md-3"></div>
           <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12" >
@@ -96,6 +111,12 @@
         </div>
 
       </div>
+</div>
+</div>
+
+<div class="container">
+    <div class="row">
+      <div id="footerGrid" class="footer col-12" >
 
       <div class="footer">
         <div class="flex-container">
@@ -106,6 +127,8 @@
         </div>
       </div>
     </div>
+</div>
+</div>
 
 
 
