new page Joint project created. navigation updated on all pages for new page. Japan & Topics removed from workshop-content.html page. China-Australia relations moved up to the second position on workshop-content.html page. heading size increased to h2 and h3. home page content styled with white text. darker pink background added to all pages.

--- a/about.html
+++ b/about.html
@@ -48,6 +48,9 @@
               <a class="nav-link nav-pad" href="workshop-content.html">Workshop content</a>
             </li>
             <li class="nav-item">
+                  <a class="nav-link nav-pad" href="jointProjects.html">Joint projects</a>
+                </li>
+            <li class="nav-item">
               <a class="nav-link nav-pad" href="workshop-packages.html">Workshop packages</a>
             </li>
             <li class="nav-item">
@@ -85,7 +88,7 @@
         <div class="row">
           <div class="col-xl-3 col-lg-3 col-md-3"></div>
           <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12" >
-            <div id="content">
+            <div class="content">
               <h5 class="d-none d-sm-block d-md-block d-lg-block d-xl-block">
                 Kate Teys is the Founder of Cross Culture Communication - Asia.  She has a background in East Asian Economic Development from Melbourne University and has lived and worked in Japan and China and travelled extensively throughout South East Asia during her career in International Aid.
               </h5>
