--- a/workshop-packages.html
+++ b/workshop-packages.html
@@ -47,6 +47,9 @@
               <a class="nav-link nav-pad" href="workshop-content.html">Workshop content</a>
             </li>
             <li class="nav-item">
+                  <a class="nav-link nav-pad" href="jointProjects.html">Joint projects</a>
+                </li>
+            <li class="nav-item">
               <a class="nav-link nav-pad" href="workshop-packages.html">Workshop packages</a>
             </li>
             <li class="nav-item">
@@ -86,20 +89,20 @@
         <div class="row">
           <div class="col-xl-3 col-lg-3 col-md-3"></div>
           <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12" >
-            <div id="content">
+            <div class="content">
               <h2 class="d-none d-sm-block d-md-block d-lg-block pl-5">Online</h2>
               <h4 class="d-block d-sm-none pl-5">Online</h4>
               <div class="pl-5">
-                <h4 class="d-none d-sm-block d-md-block d-lg-block">Topics</h4>
-                <h6 class="d-block d-sm-none">Topics</h6>
+                <h4 class="d-none d-sm-block d-md-block d-lg-block">2 hour workshops</h4>
+                <h6 class="d-block d-sm-none">2 hour workshops</h6>
               </div> 
 
               <h2 class="d-none d-sm-block d-md-block d-lg-block pl-5">In-person</h2>
               <h4 class="d-block d-sm-none pl-5">In-person</h4>
 
               <div class="pl-5">
-                <h4 class="d-none d-sm-block d-md-block d-lg-block">Topics</h4>
-                <h6 class="d-block d-sm-none">Topics</h6>
+                <h4 class="d-none d-sm-block d-md-block d-lg-block">Half-day workshops</h4>
+                <h6 class="d-block d-sm-none">Half-day workshops</h6>
               </div>  
 
 
