--- a/workshop-content.html
+++ b/workshop-content.html
@@ -46,6 +46,9 @@
               <a class="nav-link nav-pad" href="workshop-content.html">Workshop content</a>
             </li>
             <li class="nav-item">
+                  <a class="nav-link nav-pad" href="jointProjects.html">Joint projects</a>
+                </li>
+            <li class="nav-item">
               <a class="nav-link nav-pad" href="workshop-packages.html">Workshop packages</a>
             </li>
             <li class="nav-item">
@@ -84,7 +87,7 @@
         <div class="row">
           <div class="col-xl-3 col-lg-3 col-md-3"></div>
           <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12" >
-            <div id="content">
+            <div class="content">
 
               <h2 class="d-none d-sm-block d-md-block d-lg-block d-xl-block pl-5">China</h2>
               <h4 class="d-block d-sm-none pl-5"> China</h4>
@@ -103,6 +106,20 @@
                   <li><p>Cultural Intelligence or CQ</p></li>
                   <li><p>Eastern vs Western thought</p></li>
                   <li><p>Collectivism vs Individualism</p></li>
+                </ul>
+              </div>
+
+              <div class="pl-5">
+                <h2 class="d-none d-sm-block d-md-block d-lg-block d-xl-block">China-Australia relations:</h2>
+                <h3 class="d-block d-sm-none">China-Australia relations:</h3>
+
+                <ul class="d-none d-sm-block d-md-block d-lg-block d-xl-block">
+                  <li><h5>Geo-political relations</h5></li>
+                  <li><h5>Trade and FDI</h5></li>
+                </ul>
+                <ul class="d-block d-sm-none">
+                  <li><p>Geo-political relations</p></li>
+                  <li><p>Trade and FDI</p></li>
                 </ul>
               </div>
 
@@ -140,19 +157,7 @@
               </div>
 
 
-              <div class="pl-5">
-                <h4 class="d-none d-sm-block d-md-block d-lg-block d-xl-block">China-Australia relations:</h4>
-                <h5 class="d-block d-sm-none">China-Australia relations:</h5>
-
-                <ul class="d-none d-sm-block d-md-block d-lg-block d-xl-block">
-                  <li><h6>Geo-political relations</h6></li>
-                  <li><h6>Trade and FDI</h6></li>
-                </ul>
-                <ul class="d-block d-sm-none">
-                  <li><p>Geo-political relations</p></li>
-                  <li><p>Trade and FDI</p></li>
-                </ul>
-              </div>
+              
 
 
               <div class="pl-5">
@@ -169,13 +174,6 @@
                 </ul>
               </div>
 
-              <h2 class="mt-4 d-none d-sm-block d-md-block d-lg-block d-xl-block pl-5">Japan</h2>
-              <h4 class="mt-4 d-block d-sm-none pl-5"> Japan</h4>
-
-              <div class="pl-5">
-                <h4 class="d-none d-sm-block d-md-block d-lg-block d-xl-block">Topics</h4>
-                <h5 class="d-block d-sm-none ">Topics</h5>
-              </div>
 
               <h2 class="mt-4 pl-5 d-none d-sm-block d-md-block d-lg-block d-xl-block">East/West</h2>
               <h4 class="mt-4 d-block d-sm-none pl-5">East/West</h4>
