--- a/workshop-documents.html
+++ b/workshop-documents.html
@@ -46,6 +46,9 @@
               <a class="nav-link nav-pad" href="workshop-content.html">Workshop content</a>
             </li>
             <li class="nav-item">
+                  <a class="nav-link nav-pad" href="jointProjects.html">Joint projects</a>
+                </li>
+            <li class="nav-item">
               <a class="nav-link nav-pad" href="workshop-packages.html">Workshop packages</a>
             </li>
             <li class="nav-item">
@@ -87,7 +90,7 @@
         <div class="row">
           <div class="col-xl-3 col-lg-3 col-md-3"></div>
           <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12" >
-            <div id="content">
+            <div class="content">
               <h3 class="my-5 pl-5 d-none d-sm-block d-md-block d-lg-block d-xl-block"><a href="docs/Introduction to Workshops.pdf">Introduction to Workshops.pdf</a></h3>
               <h5 class="my-5 pl-5 d-block d-sm-none"><a href="docs/Introduction to Workshops.pdf">Introduction to Workshops.pdf</a></h5>
 
