capital letters added to index.html page content. display-5 added to jumbotron of each page except index.html. phone and email content moved to the left using Bootstrap Grid.  New section added to right of jointProjects.html using col-xl-6 and col-lg-6. Half-day workshops added to workshop-packages.html content. NB: content added to workshop-packages.html. New section added to about.html content using col-xl-6 col-lg-6. .homePadding style added for index.html content. img/399x454Kate.jpg, img/452x278Kate&Tanya.jpg added to project. tutorial.html page added to website. tutorial.html nav-link added to all pages.

--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
                   <a class="nav-link nav-pad" href="workshop-documents.html">Workshop documents</a>
                 </li>
                 <li class="nav-item">
+                  <a class="nav-link nav-pad" href="tutoring.html">Tutoring</a>
+                </li>
+                <li class="nav-item">
                   <a class="nav-link nav-pad" href="contact.html">Contact</a>
                 </li>
               </ul>
@@ -96,26 +99,26 @@
 
 
 
-              <div id="leftGrid" class="col-xl-2 col-lg-2 col-md-3" ></div>
+              <div id="leftGrid" class="col-xl-3 col-lg-3 col-md-3" ></div>
 
               <div id="contentGrid" class="col-xl-7 col-lg-7 col-md-12 col-sm-12 col-12" >
 
                 <div id="homePageTextColour" class="content">
                   <ul>
                     <li>
-                      <h4>
-                    Cross-cultural workshops (China)
-                  </h4>
+                      <h3 class="homePadding" >
+                    Cross-Cultural Workshops (China)
+                  </h3>
                     </li>
                     <li>
-                      <h4>
-                    Australia-China relations Workshop
-                  </h4>
+                      <h3 class="homePadding">
+                    Australia-China Relations Workshop
+                  </h3>
                     </li>
                     <li>
-                      <h4>
-                    English tutoring
-                  </h4>
+                      <h3 class="homePadding">
+                    English Tutoring
+                  </h3>
                     </li>
                   </ul>
                   
