--- a/workshop-content.html
+++ b/workshop-content.html
@@ -55,6 +55,9 @@
               <a class="nav-link nav-pad" href="workshop-documents.html">Workshop documents</a>
             </li>
             <li class="nav-item">
+                  <a class="nav-link nav-pad" href="tutoring.html">Tutoring</a>
+                </li>
+            <li class="nav-item">
               <a class="nav-link nav-pad" href="contact.html">Contact</a>
             </li>
           </ul>
@@ -71,7 +74,7 @@
         <h3 class="jumbo-style d-block d-sm-none">
           Workshop content
         </h3>
-        <h1 class="jumbo-style display-3 d-none d-sm-block d-md-block d-lg-block d-xl-block">Workshop content</h1>
+        <h1 class="jumbo-style display-5 d-none d-sm-block d-md-block d-lg-block d-xl-block">Workshop content</h1>
         
         
       </div>
