--- a/about.html
+++ b/about.html
@@ -57,6 +57,9 @@
               <a class="nav-link nav-pad" href="workshop-documents.html">Workshop documents</a>
             </li>
             <li class="nav-item">
+                  <a class="nav-link nav-pad" href="tutoring.html">Tutoring</a>
+                </li>
+            <li class="nav-item">
               <a class="nav-link nav-pad" href="contact.html">Contact</a>
             </li>
           </ul>
@@ -75,7 +78,7 @@
           <h3 class="jumbo-style d-block d-sm-none">
             About
           </h3>
-          <h1 class="jumbo-style display-3 d-none d-sm-block d-md-block d-lg-block d-xl-block">About</h1>
+          <h1 class="jumbo-style display-5 d-none d-sm-block d-md-block d-lg-block d-xl-block">About</h1>
         </div>
       </div>
     </div>
@@ -86,7 +89,7 @@
     <div class="row">
       <div id="mainGrid" class="col-12">
         <div class="row">
-          <div class="col-xl-3 col-lg-3 col-md-3"></div>
+          <!-- <div class="col-xl-3 col-lg-3 col-md-3"></div> -->
           <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12" >
             <div class="content">
               <h5 class="d-none d-sm-block d-md-block d-lg-block d-xl-block">
@@ -122,7 +125,11 @@
               </p>
             </div>
           </div>
-          <div class="col-xl-3 col-lg-3 col-md-2 "></div>
+          <div class="col-xl-5 col-lg-5 ">
+            <div class="content">
+              <img class="img-fluid" src="img/399x454Kate.jpg">
+            </div>
+          </div>
         </div>
       </div>
   </div>
