--- a/contact.html
+++ b/contact.html
@@ -55,6 +55,9 @@
               <a class="nav-link nav-pad" href="workshop-documents.html">Workshop documents</a>
             </li>
             <li class="nav-item">
+                  <a class="nav-link nav-pad" href="tutoring.html">Tutoring</a>
+                </li>
+            <li class="nav-item">
               <a class="nav-link nav-pad" href="contact.html">Contact</a>
             </li>
           </ul>
@@ -73,7 +76,7 @@
         <h3 class="jumbo-style d-block d-sm-none">
           Contact
         </h3>
-        <h1 class="jumbo-style display-3 d-none d-sm-block d-md-block d-lg-block d-xl-block">Contact</h1>
+        <h1 class="jumbo-style display-5 d-none d-sm-block d-md-block d-lg-block d-xl-block">Contact</h1>
         
       </div>
 </div>
@@ -93,15 +96,15 @@
               <div class="row">
 
 
-                <div class="col-4  text-right">
+                <div class="col-3  text-right">
                   <i class="bi bi-telephone " style="font-size: 2rem; "></i>
                 </div>
 
-                <div class="col-8  d-block d-sm-none">
+                <div class="col-9  d-block d-sm-none">
                   <h4 class="xsPhoneNoPadding"><a href="tel:+61422857579">+61422857579</a></h4>
                 </div>
 
-                <div class="col-8 d-none d-sm-block d-md-block d-lg-block d-xl-block">
+                <div class="col-9 d-none d-sm-block d-md-block d-lg-block d-xl-block">
                   <h1><a href="tel:+61422857579">+61422857579</a></h1>
                 </div>
 
@@ -109,15 +112,15 @@
 
 
 
-                <div class="col-4 text-right">
+                <div class="col-3 text-right">
                   <i class="bi bi-envelope-fill" style="font-size: 2rem; "></i>
                 </div>
 
-                <div class="col-8 d-block d-sm-none">
+                <div class="col-9 d-block d-sm-none">
                   <h5 class="xsEmailPadding"><a href="mailto:kate@cccasia.com.au?Subject=Website%20Enquiry">kate@cccasia.com.au</a></h5>
                 </div>
 
-                <div class="col-8 d-none d-sm-block d-md-block d-lg-block d-xl-block">
+                <div class="col-9 d-none d-sm-block d-md-block d-lg-block d-xl-block">
                   <h2><a href="mailto:kate@cccasia.com.au?Subject=Website%20Enquiry">kate@cccasia.com.au</a></h2>
                 </div>
 
