; changed to ampersand &

--- a/tutoring.html
+++ b/tutoring.html
@@ -111,7 +111,7 @@
                     </li>
                     
                       <h4 >
-                    (experience teaching Japanese, Chinese; Koreans)
+                    (experience teaching Japanese, Chinese & Koreans)
                   </h4>
                     
                   </ul>
