ampersand removed from Workshops & Content to make Workshops Content in navbar. sitemap.xml updated to reflect change.

--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
               <a class="nav-link nav-pad" href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link nav-pad" href="workshop-content.html">Workshops & Content</a>
+              <a class="nav-link nav-pad" href="workshop-content.html">Workshops Content</a>
             </li>
             <li class="nav-item">
                   <a class="nav-link nav-pad" href="jointProjects.html">Joint projects</a>
