--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                   <a class="nav-link nav-pad" href="about.html">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link nav-pad" href="workshop-content.html">Workshop content</a>
+                  <a class="nav-link nav-pad" href="workshop-content.html">Workshop Content</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link nav-pad" href="jointProjects.html">Joint projects</a>
