--- a/workshop-documents.html
+++ b/workshop-documents.html
@@ -43,7 +43,7 @@
               <a class="nav-link nav-pad" href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link nav-pad" href="workshop-content.html">Workshops & Content</a>
+              <a class="nav-link nav-pad" href="workshop-content.html">Workshops Content</a>
             </li>
             <li class="nav-item">
                   <a class="nav-link nav-pad" href="jointProjects.html">Joint projects</a>
