typo added ", China" and removed "-where" typo added Customs. embed-responsive embed-responsive-16by9 added for iframe video. Responsive version of text added for all tutorial content.

--- a/about.html
+++ b/about.html
@@ -121,7 +121,7 @@
                 The Cross Culture Workshops for China include Cultural Competency, Business Etiquette and Customs, as well as up to date information on China and Australia’s Trade relations.
               </p>
               <p class="d-block d-sm-none">
-                Kate also offers English tutoring online.  She has experience in Teaching English in Japan and Korea and with Asian communities in Sydney.
+                Kate also offers English tutoring online.  She has experience in Teaching English in Japan, China and Korea and with Asian communities in Sydney.
               </p>
             </div>
           </div>
