--- a/workshop-content.html
+++ b/workshop-content.html
@@ -93,7 +93,7 @@
               <div class="content">
 
                 <div class="pl-5">
-                  <h2 class="d-none d-sm-block d-md-block d-lg-block d-xl-block ">China - Australia Relations – where are we at?</h2>
+                  <h2 class="d-none d-sm-block d-md-block d-lg-block d-xl-block ">China - Australia Relations Where are we at?</h2>
                   <h4 class="d-block d-sm-none "> China - Australia Relations – where are we at?</h4>
                   <p class="font-italic ">(2-3 hour workshop on up-to-date information about China – Australia relations)</p>
                   <ul class="d-none d-sm-block d-md-block d-lg-block d-xl-block">
@@ -129,7 +129,7 @@
                 </div>
 
                 <div class="pl-5">
-                  <h4 class="d-none d-sm-block d-md-block d-lg-block d-xl-block">Business customs and Etiquette:</h4>
+                  <h4 class="d-none d-sm-block d-md-block d-lg-block d-xl-block">Business Customs and Etiquette:</h4>
                   <h5 class="d-block d-sm-none">Business customs and Etiquette:</h5>
                   <ul class="d-none d-sm-block d-md-block d-lg-block d-xl-block">
                     <li><h6>At the dinner table</h6></li>
