typo fixed in responsive text ", China" added.

--- a/about.html
+++ b/about.html
@@ -105,7 +105,7 @@
                 The Cross Culture Workshops for China include Cultural Competency, Business Etiquette and Customs, as well as up to date information on China and Australia’s Trade relations.
               </h5>
               <h5 class="d-none d-sm-block d-md-block d-lg-block d-xl-block">
-                Kate also offers English tutoring online.  She has experience in Teaching English in Japan and Korea and with Asian communities in Sydney.
+                Kate also offers English tutoring online.  She has experience in Teaching English in Japan, China and Korea and with Asian communities in Sydney.
               </h5>
 
               <p class="d-block d-sm-none">
