navbar updated so that capital letters used in each selection.

--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
                   <a class="nav-link nav-pad" href="workshop-content.html">Workshop Content</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link nav-pad" href="jointProjects.html">Joint projects</a>
+                  <a class="nav-link nav-pad" href="jointProjects.html">Joint Projects</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link nav-pad" href="workshop-packages.html">Workshop packages</a>
+                  <a class="nav-link nav-pad" href="workshop-packages.html">Workshop Packages</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link nav-pad" href="workshop-documents.html">Workshop documents</a>
+                  <a class="nav-link nav-pad" href="workshop-documents.html">Workshop Documents</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link nav-pad" href="tutoring.html">Tutoring</a>
