Home url updated to GitHub Pages value of https://chema64.github.io/CCCASIA-Container/

--- a/jointProjects.html
+++ b/jointProjects.html
@@ -16,7 +16,7 @@
 
     <title>Cross-Cultural Communication, East Asia Workshops/Consulting</title>
 
-    <link rel="canonical"  href="https://www.cccasia.com.au">
+    <link rel="canonical"  href="https://chema64.github.io/CCCASIA-Container/">
 
     <meta name="description" content="Basic proficiency in Chinese & Japanese, Cross-Cultural Workshops, China-Australia relations, Chinese culture, Workshops, China-Australia Busines relations, Economy and Trade, Geo-politics, Chinese business customs">
   </head>
@@ -31,7 +31,7 @@
 
 
           <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="https://www.cccasia.com.au">
+            <a class="navbar-brand" href="https://chema64.github.io/CCCASIA-Container/">
               <i class="bi bi-flower1"></i>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -105,9 +105,9 @@
                 <div class="content">
                   
 
-                  <h4 class="d-none d-sm-block d-md-block d-lg-block d-xl-block"><a href="https://www.cccasia.com.au" class="font-weight-bolder">Cross Cultural Communication–Asia</a> and <a href="https://www.aozhongqiao.com/" class="font-weight-bolder">Aozhongqiao (澳中桥)</a> provide targeted workshops to help prepare Australian business-people for travel to and doing business with China, and to organisations and local government wanting to improve communication and dealings between the two parties. We also provide one-to-one tutoring or workshops for Chinese business professionals who wish to improve their spoken conversational and/or technical English.
+                  <h4 class="d-none d-sm-block d-md-block d-lg-block d-xl-block"><a href="https://chema64.github.io/CCCASIA-Container/" class="font-weight-bolder">Cross Cultural Communication–Asia</a> and <a href="https://www.aozhongqiao.com/" class="font-weight-bolder">Aozhongqiao (澳中桥)</a> provide targeted workshops to help prepare Australian business-people for travel to and doing business with China, and to organisations and local government wanting to improve communication and dealings between the two parties. We also provide one-to-one tutoring or workshops for Chinese business professionals who wish to improve their spoken conversational and/or technical English.
                   </h4>
-                  <p class="d-block d-sm-none"><a href="https://www.cccasia.com.au" class="font-weight-bolder">Cross Cultural Communication–Asia</a> and <a href="https://www.aozhongqiao.com/" class="font-weight-bolder">Aozhongqiao (澳中桥)</a> provide targeted workshops to help prepare Australian business-people for travel to and doing business with China, and to organisations and local government wanting to improve communication and dealings between the two parties. We also provide one-to-one tutoring or workshops for Chinese business professionals who wish to improve their spoken conversational and/or technical English.
+                  <p class="d-block d-sm-none"><a href="https://chema64.github.io/CCCASIA-Container/" class="font-weight-bolder">Cross Cultural Communication–Asia</a> and <a href="https://www.aozhongqiao.com/" class="font-weight-bolder">Aozhongqiao (澳中桥)</a> provide targeted workshops to help prepare Australian business-people for travel to and doing business with China, and to organisations and local government wanting to improve communication and dealings between the two parties. We also provide one-to-one tutoring or workshops for Chinese business professionals who wish to improve their spoken conversational and/or technical English.
                   </p>
                 </div>
 
