--- a/workshop-packages.html
+++ b/workshop-packages.html
@@ -16,7 +16,7 @@
 
     <title>Cross-Cultural Communication, East Asia Workshops/Consulting</title>
 
-    <link rel="canonical"  href="https://www.cccasia.com.au">
+    <link rel="canonical"  href="https://chema64.github.io/CCCASIA-Container/">
 
     <meta name="description" content="Basic proficiency in Chinese & Japanese, Cross-Cultural Workshops, China-Australia relations, Chinese culture, Workshops, China-Australia Busines relations, Economy and Trade, Geo-politics, Chinese business customs">
   </head>
@@ -29,7 +29,7 @@
         <div id="navbarGrid" class="col-12" >
 
           <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="https://www.cccasia.com.au">
+            <a class="navbar-brand" href="https://chema64.github.io/CCCASIA-Container/">
               <i class="bi bi-flower1"></i>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
