--- a/contact.html
+++ b/contact.html
@@ -101,11 +101,11 @@
                 </div>
 
                 <div class="col-9  d-block d-sm-none">
-                  <h4 class="xsPhoneNoPadding"><a href="tel:+61422857579">+61422857579</a></h4>
+                  <h4 class="xsPhoneNoPadding"><a href="tel:1234567890">1234567890</a></h4>
                 </div>
 
                 <div class="col-9 d-none d-sm-block d-md-block d-lg-block d-xl-block">
-                  <h1><a href="tel:+61422857579">+61422857579</a></h1>
+                  <h1><a href="tel:1234567890">1234567890</a></h1>
                 </div>
 
 
